<resources>
    <string name="login_main_text">It\'s time to expand your network.</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="signin_text">Sign in</string>
    <string name="signup_text">Sign up</string>
    <string name="login_socially_tip">How to use Social.ly to grow your career</string>
    <string name="login_screen">LoginScreen</string>
    <string name="app_explanation">Explanation of how app works and how to use NFC to make connections</string>
    <string name="app_explanation_close">Close</string>
    <string name="app_explanation_page">AppExplanation</string>
    <string name="signup_title">Create an account</string>
    <string name="create_username_text">Username</string>
    <string name="create_password_text">Password</string>
    <string name="create_confirm_password_text">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_code_text">Enter event code</string>
    <string name="main_menu_text">Prepare for a world of opportunity.</string>
    <string name="submit_event_code_text">Let\'s go!</string>
    <string name="savedconnections_text">Saved Connections</string>
    <string name="my_profile_title">My Profile</string>
    <string name="main_menu">MainMenu</string>
    <string name="close_button_text">Close</string>
    <string name="create_username">Create username</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="app_name">Socially</string>
    <string name="connecting">Connecting page</string>
    <string name="profile">Profile Page</string>
    <string name="saved_connections">Saved Connections Page</string>
    <string name="name">Name</string>
    <string name="about_me">About me</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="linkedin">LinkedIn</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <string name="save_and_close">Save and close</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="waiting_to_connect1">Waiting to\nconnect.</string>
    <string name="waiting_to_connect2">Waiting to\nconnect..</string>
    <string name="waiting_to_connect3">Waiting to\nconnect...</string>
    <string name="timer">5:00</string>
    <string name="matched">Time to find:</string>
    <string name="open_chat">Open chat</string>
    <string name="create_event">Create Event</string>
    <string name="generate_code">Generate Event Code</string>
    <string name="generating_code">Generating Code...</string>
    <string name="back_button">Back</string>
    <string name="confirm_code">CONFIRM</string>
    <string name="how_to_use">Chat with other professionals. Tap your devices. Connect and grow your network</string>
    <string name="event_create_screen">New connections await.</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="plus_button">+</string>
    <string name="socially_logo">Social.ly logo</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="settings">Settings</string>
    <string name="leave_event">Leave event</string>
    <string name="welcomeToEvent">Welcome to event</string>
    <string name="send_message">^</string>
    <string name="close_chat">Close chat</string>
    <string name="chat_hint">Type message</string>

</resources>