<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diagonal_gradient">

    <TextView
        android:id="@+id/loginMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:text="@string/login_main_text"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_edittext"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_text"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/loginMainText"
        app:layout_constraintEnd_toEndOf="@id/loginMainText"
        app:layout_constraintTop_toBottomOf="@id/loginMainText" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_edittext"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/editUsername"
        app:layout_constraintRight_toRightOf="@id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/signin_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/gray"
        android:text="@string/signup_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="@+id/signInButton" />

    <TextView
        android:id="@+id/sociallyTip"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_socially_tip"
        android:textSize="20sp"
        android:textColor="#000"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>