<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diagonal_gradient"
    tools:context=".MainMenuFragment">

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/main_menu_text"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventcode_editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/rectangle_edittext"
        android:ems="10"
        android:hint="@string/event_code_text"
        android:inputType="text"
        android:textSize="24sp"
        android:maxLength="10"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuText" />

    <Button
        android:id="@+id/submitEventCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/submit_event_code_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/eventcode_editText"
        app:layout_constraintTop_toBottomOf="@+id/eventcode_editText" />

    <Button
        android:id="@+id/savedConnectionsButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gray"
        android:text="@string/savedconnections_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="24sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:text="@string/create_event"
        app:layout_constraintRight_toRightOf="@+id/eventcode_editText"
        app:layout_constraintTop_toBottomOf="@+id/eventcode_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>