<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/diagonal_gradient">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/welcomeToEventText"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:gravity="center"
            android:text="@string/welcomeToEvent"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/connectingTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waiting_to_connect1"
            android:textColor="@color/black"
            android:textSize="50dp" />

        <Button
            android:id="@+id/placeHolderButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/leave_event"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>