<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileScreenTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:background="@drawable/diagonal_gradient"
                android:text="@string/my_profile_title" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="10dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/profileNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profileNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/name"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profileAboutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profileAboutEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:hint="@string/about_me"
                android:gravity="top"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profileCompanyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profileCompanyEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/company"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profilePositionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profilePositionEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/position"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profilePhoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profilePhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/phone"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="phone"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profileEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profileEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/email"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="textEmailAddress"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <TextView
                android:id="@+id/profileLinkedinTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkedin"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/profileLinkedinEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/linkedin"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_edittext" />

            <Button
                android:id="@+id/profileSaveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/save_and_close"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/black" />

            <Button
                android:id="@+id/profileExitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/exit_without_saving"
                android:textColor="@color/black"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/gray" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>